# prizms-oss

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  run_api.py  run_migrations.py
backend/api/: __init__.py  app.py  config.py  dependencies.py
backend/api/middleware/: auth.py
backend/api/models/: __init__.py  debate.py  errors.py  user.py
backend/api/routes/: __init__.py  debates.py  health.py  personalities.py  usage.py  users.py
backend/api/services/: __init__.py  database.py  debates.py
backend/core/: __init__.py  config.py  display.py  graph.py  models.py  nodes.py  output.py
backend/migrations/: 001_create_debate_tables.sql
backend/modules/: __init__.py
backend/modules/auth/: __init__.py  exceptions.py  interfaces.py  models.py  service.py
backend/modules/billing/: __init__.py  exceptions.py  interfaces.py  models.py  service.py
backend/modules/debates/: __init__.py  event_mapper.py  exceptions.py  interfaces.py  models.py  repository.py  routes.py  service.py  state_builder.py  stream_adapter.py  usage_tracker.py
backend/modules/usage/: __init__.py  callback.py  exceptions.py  interfaces.py  models.py  pricing.py  service.py  token_counter.py
backend/prompts/: chaos_monkey.txt  consensus_check.txt  critic.txt  interpreter.txt  judge.txt
backend/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  grok.py  lm_studio.py  ollama.py  openai.py  openai_compatible.py  openrouter.py  vllm.py
backend/shared/: __init__.py  config.py  database.py  debate_config.py  exceptions.py  models.py  repository.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_config.py  test_debates.py  test_health.py  test_personalities.py  test_usage.py
backend/tests/modules/auth/: __init__.py  test_interfaces.py  test_models.py  test_service.py
backend/tests/modules/billing/: __init__.py  test_exceptions.py  test_interfaces.py  test_models.py  test_service.py
backend/tests/modules/debates/: __init__.py  test_event_mapper.py  test_exceptions.py  test_interfaces.py  test_models.py  test_repository.py  test_routes.py  test_service.py  test_state_builder.py  test_stream_adapter.py  test_streaming_routes.py  test_usage_tracker.py
backend/tests/modules/usage/: __init__.py  conftest.py  test_callback.py  test_exceptions.py  test_interfaces.py  test_models.py  test_pricing.py  test_service.py  (+1 more)
backend/tests/providers/: test_anthropic.py  test_gemini.py  test_grok.py  test_openai.py  test_openai_compatible.py  test_openrouter.py
backend/tests/shared/: test_config.py  test_database.py  test_debate_config.py  test_exceptions.py  test_models.py  test_repository.py
evaluations/llm-orchestration-toolchains/langchain/: .env.example  README.md  config.example.toml  config.py  display.py  main.py  pyproject.toml
evaluations/llm-orchestration-toolchains/langgraph/: README.md  config.example.toml  config.py  display.py  graph.py  llm.py  main.py  nodes.py  output.py  pyproject.toml
evaluations/llm-orchestration-toolchains/promptflow/: README.md  main.py  pyproject.toml
(+10 files in other folders)
