[project]
name = "prizms-langgraph"
version = "0.1.0"
description = "Multi-round debate LLM tool using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langchain-text-splitters>=0.3",
    "rich>=13.7.0",
]
